--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -36,7 +36,7 @@
           data-target="#register-box"
           data-load-state="#login"
     >
-        <?= $this->formLogin->csrfLogin ?>
+        <?=Default_Model_CsrfProtection::getFormCsrf('login_csrf'); ?>
         <?= $this->formLogin->redirect ?>
         <?= $this->formLogin->dologin ?>
         <?php
